# world-cup-2026-bracket

./: README.md  WC26_Brackets.py  build_highlights.py  build_web.py  download_resources.py  pyproject.toml  worldcup_highlights.json
docs/: index.html
